--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
 		<br>
 		<div class="bottom"><b>Copyright &nbsp;&#169;&nbsp;2016</b> Pearson Education&nbsp;&#62; <b>Inc., All Rights Reserved |</b> Pearson Higher Education &nbsp;&#62; | Legal Notice &nbsp;&#62; | Privacy Policy&nbsp;&#62; | Permissions&nbsp;&#62;</div>
 
+		</br>
+		<iframe src="https://neiu-my.sharepoint.com/personal/achen1_neiu_edu/_layouts/15/Doc.aspx?sourcedoc={0ada054a-86b0-4125-9d70-34d1eae1006c}&amp;action=embedview&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 
 </body>
 </html>
